routes: include `match2` endpoint
